--- a/main.css
+++ b/main.css
@@ -36,7 +36,6 @@ a:hover {
 img {
   width: 300px;
   height: 300px;
-  
 }
 .container-images {
   display: flex;
@@ -59,3 +58,4 @@ img {
 .two {
   margin-top: 20px;
 }
+/* this is a new comment */
